@@ -118,7 +118,6 @@ class CHistory extends CZBXAPI {
 		}
 		else {
 			$itemOptions = array(
-				'filter' => array('flags' => array(ZBX_FLAG_DISCOVERY_NORMAL, ZBX_FLAG_DISCOVERY_CREATED)),
 				'editable' => $options['editable'],
 				'preservekeys' => true,
 				'webitems' => true
