@@ -52,8 +52,10 @@ if (!DBfetch(DBselect('SELECT i.itemid FROM items i WHERE i.itemid='.$_REQUEST['
 $dbItems = API::Item()->get(array(
 	'itemids' => $_REQUEST['itemid'],
 	'webitems' => true,
-	'nodeids' => get_current_nodeid(true)
+	'nodeids' => get_current_nodeid(true),
+	'filter' => array('flags' => null)
 ));
+
 if (empty($dbItems)) {
 	access_deny();
 }
