@@ -70,6 +70,8 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+A.F....... [ZBX-5684] fixed inconsistency that CItem get() returned discovery rules and item prototypes by default (Toms)
+A......... [ZBX-5684] fixed problem when updating non normal items status, it's flag is changed to normal (Toms)
 ..F....... [ZBX-5882] fixed "Illegal string offset" errors and allowed templated trigger prototypes in trigger expressions test (Oleg)
 ....I..... [ZBX-5848] removed flexible intervals from items in the default templates (Sasha)
 ..F....... [ZBX-5877] fixed tree position saving in IT services (Eduard)
